# ReefTwin

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.training  Makefile  QUICKSTART.md  README.md  ReefTwin_Security_Implementation.txt  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
configs/: data_sources.yml  model_config.yml  reefs.yml
configs/avro/: iot_reading.avsc
docs/: architecture.md  data_dictionary.md  experiment_plan.md  model_card.md
docs/articles/: kf4x-deep-dive.md  kf4x-getting-started.md  kf4x-overview.md  linkedin-launch-post.md  supply-chain-diagram.md
docs/security/: risk_register.md  security_baseline.md  threat_model.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts
infra/k8s/: deployment.yaml
infra/prometheus/: prometheus.yml
infrastructure/: fti.py  logging.py  security.py  settings.py
models/: ecosystem_graph.py  fallback.py  predictor.py  stress_scoring.py  uncertainty.py
notebooks/: demo_walkthrough.ipynb  demo_walkthrough.py
pipelines/: build_features.py  generate_geotiff.py  ingest_netcdf.py  ingest_noaa_crw.py  ingest_noaa_real.py  simulate_iot_stream.py  update_twin_state.py
scripts/: run_experiments.py  sign_model.sh
tests/: test_dashboard.py  test_ecosystem_graph.py  test_evidently_drift.py  test_experiments.py  test_features.py  test_genai.py  test_hybrid_predictor.py  test_inference.py  test_integration.py  test_mlops.py  test_oidc_auth.py  test_physics.py  test_pinn_cnn_sagemaker.py  test_predictor.py  test_rbac.py  test_s3_store.py  test_security_risks.py  test_settings.py  test_simulation_api.py  test_state_store.py  test_streaming.py  test_stress_scoring.py  test_tier7.py  test_uncertainty.py
(+52 files in other folders)
